# MangaKensaku

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: infer.py  main.py
app/faiss/: cloudinary_map.json  faiss_index  faiss_index.paths
app/templates/: index.html  search_result.html
